Added new Articles

--- a/content/dbms/02-database-models-and-er-diagrams.mdx
+++ b/content/dbms/02-database-models-and-er-diagrams.mdx
@@ -125,8 +125,6 @@ Imagine we are designing a database for a university. The key entities in this d
 > _Teaching_: A relationship between Professors and Courses, indicating which professors teach which courses.
   - Cardinality: One professor can teach many courses, and one course can be taught by many professors (many-to-many).
 
-Here is a simplified visual representation of this ER diagram:
+{/* Here is a simplified visual representation of this ER diagram: */}
 
 {/* ER diagram of student DB */}
-
-By following these steps and guidelines, you can design effective ER diagrams that accurately capture the structure and relationships of your database. ER diagrams serve as a valuable tool for database designers, developers, and stakeholders to visualize and communicate the database design effectively.
