website name changed through csexplore to systemnode

--- a/content/c/01-introduction.mdx
+++ b/content/c/01-introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introduction to C Programming Language
 description: Learn the fundamentals of C programming, including its history, features, installation, and first program execution.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Introduction to C Programming 🚀
