--- a/content/dbms/01-introduction-to-dbms.mdx
+++ b/content/dbms/01-introduction-to-dbms.mdx
@@ -3,7 +3,7 @@ guideId: DBMS-101
 moduleId: DBMS-01
 title: Introduction to DBMS
 description: Learn the fundamentals of DBMS, including its history, features, types of databases, and first hands-on experience with SQL.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Introduction to DBMS
