--- a/content/dbms/03-relational-model-and-keys-in-dbms.mdx
+++ b/content/dbms/03-relational-model-and-keys-in-dbms.mdx
@@ -3,7 +3,7 @@ guideId: DBMS-101
 moduleId: DBMS-03
 title: Relational Model & Keys in DBMS
 description: Learn about relations, attributes, primary keys, foreign keys, and referential integrity in databases.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Relational Model & Keys in DBMS
