--- a/content/dbms/04-database-normalization-and-schema-design.mdx
+++ b/content/dbms/04-database-normalization-and-schema-design.mdx
@@ -3,7 +3,7 @@ guideId: DBMS-101
 moduleId: DBMS-04
 title: Database Normalization & Schema Design
 description: Explore normalization techniques (1NF - 5NF) and how to design efficient database schemas.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Database Normalization & Schema Design
