--- a/content/dbms/14-views-stored-procedures-and-triggers.mdx
+++ b/content/dbms/14-views-stored-procedures-and-triggers.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-14
 title: Views, Stored Procedures & Triggers
 description: Understand database views, stored procedures, and triggers for automation.
-author: CSExplore Team
+author: SystemNode Team
 ---
