--- a/content/dbms/15-sql-transactions-and-performance-optimization.mdx
+++ b/content/dbms/15-sql-transactions-and-performance-optimization.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-15
 title: SQL Transactions & Performance Optimization
 description: Optimize database performance with indexing and query tuning.
-author: CSExplore Team
+author: SystemNode Team
 ---
