--- a/content/dbms/19-big-data-and-distributed-databases.mdx
+++ b/content/dbms/19-big-data-and-distributed-databases.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-19
 title: Big Data & Distributed Databases
 description: Explore concepts of big data, Hadoop, and distributed database management.
-author: CSExplore Team
+author: SystemNode Team
 ---
