--- a/content/dbms/22-cloud-databases-and-aws-rds.mdx
+++ b/content/dbms/22-cloud-databases-and-aws-rds.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-22
 title: Cloud Databases & AWS RDS
 description: Get hands-on with cloud databases using AWS RDS and Google Cloud SQL.
-author: CSExplore Team
+author: SystemNode Team
 ---
