--- a/content/dbms/23-top-50-sql-interview-questions.mdx
+++ b/content/dbms/23-top-50-sql-interview-questions.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-23
 title: Top 50 SQL Interview Questions
 description: Practice frequently asked SQL questions for technical interviews.
-author: CSExplore Team
+author: SystemNode Team
 ---
