--- a/content/dbms/24-top-dbms-theory-questions.mdx
+++ b/content/dbms/24-top-dbms-theory-questions.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-24
 title: Top 30 DBMS Theory Questions
 description: Prepare for DBMS theoretical questions asked in interviews.
-author: CSExplore Team
+author: SystemNode Team
 ---
