--- a/content/dbms/25-final-capstone.mdx
+++ b/content/dbms/25-final-capstone.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-25
 title: Final Capstone - Scalable Social Media Database
 description: Design and implement a scalable database for a social media platform.
-author: CSExplore Team
+author: SystemNode Team
 ---
