--- a/content/c/02-variable.mdx
+++ b/content/c/02-variable.mdx
@@ -1,7 +1,7 @@
 ---
 title: Variable
 description: Learn the fundamentals of C programming, including its history, features, installation, and first program execution.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Introduction to C Programming 🚀
