--- a/content/dbms/05-indexing-and-hashing.mdx
+++ b/content/dbms/05-indexing-and-hashing.mdx
@@ -3,7 +3,7 @@ guideId: DBMS-101
 moduleId: DBMS-05
 title: Indexing & Hashing
 description: Understand indexing methods, B-trees, and hashing techniques to optimize database performance.
-author: CSExplore Team
+author: SystemNode Team
 ---
 
 # Indexing & Hashing
