--- a/content/dbms/07-deadlocks-and-recovery-in-dbms.mdx
+++ b/content/dbms/07-deadlocks-and-recovery-in-dbms.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-07
 title: Deadlocks & Recovery in DBMS
 description: Understand deadlocks, detection techniques, and database recovery mechanisms.
-author: CSExplore Team
+author: SystemNode Team
 ---
