--- a/content/dbms/08-storage-management-and-file-organization.mdx
+++ b/content/dbms/08-storage-management-and-file-organization.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-08
 title: Storage Management & File Organization
 description: Explore storage hierarchy, file organization techniques, and RAID storage.
-author: CSExplore Team
+author: SystemNode Team
 ---
