--- a/content/dbms/09-nosql-vs-sql-databases.mdx
+++ b/content/dbms/09-nosql-vs-sql-databases.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-09
 title: NoSQL vs SQL Databases
 description: Compare SQL and NoSQL databases and learn when to use each.
-author: CSExplore Team
+author: SystemNode Team
 ---
