--- a/content/dbms/10-dbms-case-studies-and-real-world-use-cases.mdx
+++ b/content/dbms/10-dbms-case-studies-and-real-world-use-cases.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-10
 title: DBMS Case Studies & Real-World Use Cases
 description: Analyze real-world DBMS implementations in banking, e-commerce, and social media.
-author: CSExplore Team
+author: SystemNode Team
 ---
