--- a/content/dbms/11-sql-basic-ddl-dml-and-dcl.mdx
+++ b/content/dbms/11-sql-basic-ddl-dml-and-dcl.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-11
 title: SQL Basics - DDL, DML, and DCL
 description: Learn SQL commands for data definition, manipulation, and control.
-author: CSExplore Team
+author: SystemNode Team
 ---
