--- a/content/dbms/12-sql-queries-and-filtering.mdx
+++ b/content/dbms/12-sql-queries-and-filtering.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-12
 title: SQL Queries & Filtering
 description: Master SELECT queries, filtering with WHERE, and aggregate functions.
-author: CSExplore Team
+author: SystemNode Team
 ---
