--- a/content/dbms/13-sql-joins-and-subqueries.mdx
+++ b/content/dbms/13-sql-joins-and-subqueries.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-13
 title: SQL Joins & Subqueries
 description: Learn INNER, LEFT, RIGHT, FULL joins and advanced subqueries.
-author: CSExplore Team
+author: SystemNode Team
 ---
