--- a/content/dbms/16-advanced-sql-window-functions-and-ctes.mdx
+++ b/content/dbms/16-advanced-sql-window-functions-and-ctes.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-16
 title: Advanced SQL - Window Functions & CTEs
 description: Explore RANK, DENSE_RANK, ROW_NUMBER, and common table expressions (CTEs).
-author: CSExplore Team
+author: SystemNode Team
 ---
