--- a/content/dbms/17-final-sql-capstone-project.mdx
+++ b/content/dbms/17-final-sql-capstone-project.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-17
 title: Final SQL Capstone Project
 description: Build a complete HR management system using SQL.
-author: CSExplore Team
+author: SystemNode Team
 ---
