--- a/content/dbms/18-sharding-and-replication-strategies.mdx
+++ b/content/dbms/18-sharding-and-replication-strategies.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-18
 title: Sharding & Replication Strategies
 description: Learn database partitioning, replication strategies, and distributed databases.
-author: CSExplore Team
+author: SystemNode Team
 ---
