--- a/content/dbms/20-database-security-and-encription.mdx
+++ b/content/dbms/20-database-security-and-encription.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-20
 title: Database Security & Encryption
 description: Understand authentication, authorization, and encryption techniques in databases.
-author: CSExplore Team
+author: SystemNode Team
 ---
