--- a/content/dbms/21-backup-and-disaster-recovery.mdx
+++ b/content/dbms/21-backup-and-disaster-recovery.mdx
@@ -3,5 +3,5 @@ guideId: DBMS-101
 moduleId: DBMS-21
 title: Backup & Disaster Recovery
 description: Learn strategies for database backup and disaster recovery planning.
-author: CSExplore Team
+author: SystemNode Team
 ---
