--- a/content/sql/10-window-functions-and-ctes.mdx
+++ b/content/sql/10-window-functions-and-ctes.mdx
@@ -1,6 +1,6 @@
 ---
-guideId: DBMS-101
-moduleId: DBMS-16
+guideId: SQL-101
+moduleId: SQL-10
 title: Advanced SQL - Window Functions & CTEs
 description: Explore RANK, DENSE_RANK, ROW_NUMBER, and common table expressions (CTEs).
 author: SystemNode Team
