--- a/content/sql/12-final-sql-capstone-project.mdx
+++ b/content/sql/12-final-sql-capstone-project.mdx
@@ -1,6 +1,6 @@
 ---
-guideId: DBMS-101
-moduleId: DBMS-17
+guideId: SQL-101
+moduleId: SQL-12
 title: Final SQL Capstone Project
 description: Build a complete HR management system using SQL.
 author: SystemNode Team
