--- a/content/sql/11-top-50-sql-interview-questions.mdx
+++ b/content/sql/11-top-50-sql-interview-questions.mdx
@@ -1,6 +1,6 @@
 ---
-guideId: DBMS-101
-moduleId: DBMS-23
+guideId: SQL-101
+moduleId: SQL-11
 title: Top 50 SQL Interview Questions
 description: Practice frequently asked SQL questions for technical interviews.
 author: SystemNode Team
