changed the landing page

--- a/content/dbms/02-database-models-and-er-diagrams.mdx
+++ b/content/dbms/02-database-models-and-er-diagrams.mdx
@@ -10,8 +10,6 @@ author: SystemNode Team
 
 Databases play a crucial role in managing and organizing data efficiently. To handle different types of data and relationships, various database models are used. Each model defines a specific way of structuring and storing data to optimize retrieval and management. Additionally, designing a database requires a clear blueprint, which is where **Entity-Relationship (ER) diagrams** come into play. ER diagrams visually represent the structure of a database, making it easier to design and understand complex data relationships.
 
-{/* Student Database ER Diagram */}
-
 ## Database Models
 
 A database model determines how data is structured and accessed. Different models cater to different types of applications. Here are some common database models:
@@ -22,7 +20,7 @@ The hierarchical model organizes data in a tree-like structure, where each recor
 
 > An organizational chart where each employee reports to a single manager.
 
-{/* Image of Hierarchical Model */}
+![hierarchical model image](/images/dbms/hierarchical-model.png)
 
 ### 2. Network Model
 
